Fix prod config sync for footer hubspot form

--- a/config/crescenttool/default/block.block.hubspotemailsignup.yml
+++ b/config/crescenttool/default/block.block.hubspotemailsignup.yml
@@ -1,8 +1,9 @@
+uuid: cbf4aae1-fdfc-49a4-ad30-84f0662b925b
 langcode: en
 status: true
 dependencies:
   content:
-    - 'block_content:basic:89dd425c-6315-4bca-91e7-ad522666c684'
+    - 'block_content:basic:3e61a921-a42e-47b1-ac23-e346e3d99e93'
   module:
     - block_content
   theme:
@@ -12,9 +13,9 @@ theme: crescenttool
 region: footer_second
 weight: 0
 provider: null
-plugin: 'block_content:89dd425c-6315-4bca-91e7-ad522666c684'
+plugin: 'block_content:3e61a921-a42e-47b1-ac23-e346e3d99e93'
 settings:
-  id: 'block_content:89dd425c-6315-4bca-91e7-ad522666c684'
+  id: 'block_content:3e61a921-a42e-47b1-ac23-e346e3d99e93'
   label: 'Hubspot Email Sign-Up'
   label_display: '0'
   provider: block_content
