--- a/config/gearwrench/default/block.block.hubspotemailsignup.yml
+++ b/config/gearwrench/default/block.block.hubspotemailsignup.yml
@@ -1,8 +1,9 @@
+uuid: 1cbc004e-ca52-4472-bd50-eea0fe2b74c5
 langcode: en
 status: true
 dependencies:
   content:
-    - 'block_content:basic:955455c4-39af-4811-bf43-967d5ccbbb64'
+    - 'block_content:basic:a495642a-9dda-457b-a4b7-61b29ec4c5ce'
   module:
     - block_content
   theme:
@@ -12,9 +13,9 @@ theme: gearwrench
 region: footer_second
 weight: 0
 provider: null
-plugin: 'block_content:955455c4-39af-4811-bf43-967d5ccbbb64'
+plugin: 'block_content:a495642a-9dda-457b-a4b7-61b29ec4c5ce'
 settings:
-  id: 'block_content:955455c4-39af-4811-bf43-967d5ccbbb64'
+  id: 'block_content:a495642a-9dda-457b-a4b7-61b29ec4c5ce'
   label: 'Hubspot Email Sign-Up'
   label_display: '0'
   provider: block_content
