--- a/config/apextoolgroup/default/core.entity_view_display.block_content.social_icons.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.block_content.social_icons.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.block_content.social_icons.field_share_icon
     - field.field.block_content.social_icons.field_share_link
     - field.field.block_content.social_icons.field_title
+    - field.field.block_content.social_icons.field_weight_to_rearrange
   module:
     - link
     - text
@@ -42,7 +43,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
   field_title:
     type: string
@@ -50,8 +51,9 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 4
+    weight: 3
     region: content
 hidden:
+  field_weight_to_rearrange: true
   langcode: true
   search_api_excerpt: true
