--- a/config/apextoolgroup/default/views.view.footer_social_block.yml
+++ b/config/apextoolgroup/default/views.view.footer_social_block.yml
@@ -176,7 +176,20 @@ display:
         type: tag
         options: {  }
       empty: {  }
-      sorts: {  }
+      sorts:
+        field_weight_to_rearrange_value:
+          id: field_weight_to_rearrange_value
+          table: block_content__field_weight_to_rearrange
+          field: field_weight_to_rearrange_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       arguments: {  }
       filters:
         status:
