APEX-253: Faq Changes

--- a/config/apextoolgroup/default/views.view.faq.yml
+++ b/config/apextoolgroup/default/views.view.faq.yml
@@ -254,6 +254,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
+      css_class: faq-listing
       header: {  }
       footer: {  }
       display_extenders: {  }
