--- a/config/apextoolgroup/default/block.block.apextoolgroup_local_tasks.yml
+++ b/config/apextoolgroup/default/block.block.apextoolgroup_local_tasks.yml
@@ -2,6 +2,8 @@ uuid: 83e8b451-3202-4c6b-84bb-02d12fa6445f
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - apextoolgroup
 _core:
@@ -19,4 +21,8 @@ settings:
   provider: core
   primary: true
   secondary: true
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: "/brands-faceting\r\n/brands-faceting/hand-tool\r\n/brands-faceting/power-tool"
