--- a/config/apextoolgroup/default/core.entity_form_display.block_content.hero_image.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.block_content.hero_image.default.yml
@@ -6,19 +6,39 @@ dependencies:
     - block_content.type.hero_image
     - field.field.block_content.hero_image.body
     - field.field.block_content.hero_image.field_image
+    - field.field.block_content.hero_image.field_title
   module:
     - media_library
+    - text
 id: block_content.hero_image.default
 targetEntityType: block_content
 bundle: hero_image
 mode: default
 content:
-  field_image:
-    type: media_library_widget
+  body:
+    type: text_textarea_with_summary
     weight: 2
     region: content
     settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+      show_summary: false
+    third_party_settings: {  }
+  field_image:
+    type: media_library_widget
+    weight: 3
+    region: content
+    settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   info:
     type: string_textfield
@@ -30,10 +50,9 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 1
+    weight: 4
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
-hidden:
-  body: true
+hidden: {  }
