--- a/config/apextoolgroup/default/field.storage.node.field_media_center_type.yml
+++ b/config/apextoolgroup/default/field.storage.node.field_media_center_type.yml
@@ -12,17 +12,17 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: brand_elements
-      label: 'Brand Elements'
+      value: ethics
+      label: Ethics
     -
-      value: multisite_ads
-      label: 'Multisite Ads'
+      value: sustainability
+      label: Sustainability
     -
-      value: multisite_brochures
-      label: 'Multisite Brochures'
+      value: compliance
+      label: Compliance
     -
-      value: multisite_catalog
-      label: 'Multisite Catalog'
+      value: safety
+      label: Safety
   allowed_values_function: ''
 module: options
 locked: false
