--- a/config/apextoolgroup/default/core.entity_form_display.node.ethics_section.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.ethics_section.default.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - field.field.node.ethics_section.body
     - field.field.node.ethics_section.field_media
+    - field.field.node.ethics_section.field_media_center_type
     - field.field.node.ethics_section.field_section_name
     - node.type.ethics_section
   module:
+    - media_library
     - path
     - text
 id: node.ethics_section.default
@@ -17,7 +19,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 9
     region: content
     settings:
       rows: 9
@@ -27,67 +29,60 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_media:
-    type: entity_reference_autocomplete
-    weight: 123
+    type: media_library_widget
+    weight: 10
     region: content
     settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+      media_types: {  }
     third_party_settings: {  }
-  field_section_name:
-    type: entity_reference_autocomplete
-    weight: 122
+  field_media_center_type:
+    type: options_select
+    weight: 26
     region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -95,7 +90,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -104,8 +99,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_section_name: true
