--- a/config/apextoolgroup/default/core.entity_view_display.node.ethics_section.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.ethics_section.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.ethics_section.body
     - field.field.node.ethics_section.field_media
+    - field.field.node.ethics_section.field_media_center_type
     - field.field.node.ethics_section.field_section_name
     - node.type.ethics_section
   module:
@@ -31,6 +32,7 @@ content:
     region: content
 hidden:
   field_media: true
+  field_media_center_type: true
   field_section_name: true
   langcode: true
   search_api_excerpt: true
