--- a/config/apextoolgroup/default/field.field.node.ethics_section.field_media.yml
+++ b/config/apextoolgroup/default/field.field.node.ethics_section.field_media.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_media
-    - media.type.video
+    - media.type.remote_video
     - node.type.ethics_section
 id: node.ethics_section.field_media
 field_name: field_media
@@ -20,7 +20,7 @@ settings:
   handler: 'default:media'
   handler_settings:
     target_bundles:
-      video: video
+      remote_video: remote_video
     sort:
       field: _none
       direction: ASC
