--- a/config/apextoolgroup/default/field.field.node.office.field_address.yml
+++ b/config/apextoolgroup/default/field.field.node.office.field_address.yml
@@ -20,6 +20,12 @@ default_value_callback: ''
 settings:
   available_countries: {  }
   langcode_override: ''
-  field_overrides: {  }
+  field_overrides:
+    givenName:
+      override: optional
+    additionalName:
+      override: optional
+    familyName:
+      override: optional
   fields: {  }
 field_type: address
