--- a/config/apextoolgroup/default/field.field.node.office.field_learn_about_our_process_ti.yml
+++ b/config/apextoolgroup/default/field.field.node.office.field_learn_about_our_process_ti.yml
@@ -9,7 +9,7 @@ id: node.office.field_learn_about_our_process_ti
 field_name: field_learn_about_our_process_ti
 entity_type: node
 bundle: office
-label: 'customer service phone'
+label: 'Customer Service Phone'
 description: ''
 required: false
 translatable: true
