--- a/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
+++ b/docroot/themes/custom/apextoolgroup/apextoolgroup.libraries.yml
@@ -57,6 +57,16 @@ brand-timeline:
     - core/drupal
     - core/jquery
     - core/jquery.once
+
+offices-map:
+  js:
+    js/offices.js: {}
+
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+
 faq-listing:
   js:
     js/faq-listing.js: {}
