--- a/config/apextoolgroup/default/core.entity_view_display.node.office.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.office.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.office.field_address
     - field.field.node.office.field_category
     - field.field.node.office.field_learn_about_our_process_ti
+    - field.field.node.office.field_listing_image
     - field.field.node.office.field_location
     - field.field.node.office.field_phone
     - field.field.node.office.field_read_more
@@ -38,6 +39,7 @@ hidden:
   field_address: true
   field_category: true
   field_learn_about_our_process_ti: true
+  field_listing_image: true
   field_location: true
   field_phone: true
   field_read_more: true
