--- a/config/apextoolgroup/default/block.block.ethicsbanner.yml
+++ b/config/apextoolgroup/default/block.block.ethicsbanner.yml
@@ -1,23 +1,23 @@
-uuid: d2e33ed5-43a5-437b-8b0d-d9881606f890
+uuid: a1ba89ba-a296-4cd8-ad51-952e2aa2d52f
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.brand_listing_banner
+    - fixed_block_content.fixed_block_content.ethics_banner
   module:
     - fixed_block_content
     - system
   theme:
     - apextoolgroup
-id: brandlistingbanner
+id: ethicsbanner
 theme: apextoolgroup
 region: pre_content
-weight: -10
+weight: -11
 provider: null
-plugin: 'fixed_block_content:brand_listing_banner'
+plugin: 'fixed_block_content:ethics_banner'
 settings:
-  id: 'fixed_block_content:brand_listing_banner'
-  label: 'Brand Listing Banner'
+  id: 'fixed_block_content:ethics_banner'
+  label: 'Ethics Banner'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /brands-faceting
+    pages: "/ethics\r\n/ethics/sustainability\r\n/ethics/compliance\r\n/ethics/safety"
