APEX:266 banner text overflow issue fixing

--- a/config/apextoolgroup/default/views.view.homepage_news.yml
+++ b/config/apextoolgroup/default/views.view.homepage_news.yml
@@ -6,9 +6,11 @@ dependencies:
     - field.storage.node.body
     - field.storage.node.field_date
     - field.storage.node.field_media
+    - image.style.homepage_news
     - node.type.news
   module:
     - datetime
+    - media
     - node
     - options
     - text
@@ -79,9 +81,12 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_view
+          type: media_thumbnail
           settings:
-            view_mode: embed
+            image_link: ''
+            image_style: homepage_news
+            image_loading:
+              attribute: lazy
           group_column: target_id
           group_columns: {  }
           group_rows: true
