--- a/config/apextoolgroup/default/core.entity_form_display.node.brands.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.brands.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.brands.body
     - field.field.node.brands.field_all_industries
     - field.field.node.brands.field_all_markets
+    - field.field.node.brands.field_banner_image
     - field.field.node.brands.field_brand_color
     - field.field.node.brands.field_business_unit
     - field.field.node.brands.field_claim_to_fame
@@ -30,7 +31,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 10
     region: content
     settings:
       rows: 9
@@ -40,25 +41,32 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_all_industries:
     type: options_select
-    weight: 128
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field_all_markets:
     type: options_select
-    weight: 127
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_banner_image:
+    type: media_library_widget
+    weight: 1
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_brand_color:
     type: color_field_widget_default
-    weight: 122
+    weight: 11
     region: content
     settings:
       placeholder_color: ''
@@ -66,13 +74,13 @@ content:
     third_party_settings: {  }
   field_business_unit:
     type: options_select
-    weight: 125
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   field_claim_to_fame:
     type: text_textarea
-    weight: 132
+    weight: 21
     region: content
     settings:
       rows: 5
@@ -80,13 +88,13 @@ content:
     third_party_settings: {  }
   field_end_users:
     type: options_select
-    weight: 129
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   field_footer_note:
     type: text_textarea
-    weight: 133
+    weight: 22
     region: content
     settings:
       rows: 5
@@ -94,21 +102,21 @@ content:
     third_party_settings: {  }
   field_is_featured:
     type: boolean_checkbox
-    weight: 123
+    weight: 12
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_listing_image:
     type: media_library_widget
-    weight: 130
+    weight: 19
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_read_more:
     type: link_default
-    weight: 124
+    weight: 13
     region: content
     settings:
       placeholder_url: ''
@@ -116,7 +124,7 @@ content:
     third_party_settings: {  }
   field_short_description:
     type: text_textarea
-    weight: 131
+    weight: 20
     region: content
     settings:
       rows: 5
@@ -124,7 +132,7 @@ content:
     third_party_settings: {  }
   field_solution:
     type: options_select
-    weight: 126
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -137,34 +145,34 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 9
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -172,7 +180,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -181,7 +189,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
