--- a/config/apextoolgroup/default/views.view.brand_timeline.yml
+++ b/config/apextoolgroup/default/views.view.brand_timeline.yml
@@ -208,9 +208,8 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: text_trimmed
-          settings:
-            trim_length: 100
+          type: text_default
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
