feature/APEX-252: ATG-about-us-subpages

--- a/config/apextoolgroup/default/field.field.node.page.field_media.yml
+++ b/config/apextoolgroup/default/field.field.node.page.field_media.yml
@@ -12,7 +12,7 @@ id: node.page.field_media
 field_name: field_media
 entity_type: node
 bundle: page
-label: 'Listing Image'
+label: 'Hero Image'
 description: ''
 required: false
 translatable: true
@@ -25,6 +25,7 @@ settings:
       image: image
     sort:
       field: _none
+      direction: ASC
     auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference
