--- a/config/apextoolgroup/default/block.block.pagetitle.yml
+++ b/config/apextoolgroup/default/block.block.pagetitle.yml
@@ -21,4 +21,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /product-types
+    pages: "/product-types\r\n/community-engagement"
