--- a/config/apextoolgroup/default/core.entity_form_display.node.page.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.page.default.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
     - field_group
     - limited_field_widgets
+    - media_library
     - metatag
     - paragraphs
     - path
@@ -20,9 +22,12 @@ third_party_settings:
       children:
         - group_main
         - group_content
+        - field_media
+        - langcode
       label: Tabs
+      region: hidden
       parent_name: ''
-      weight: 0
+      weight: 11
       format_type: tabs
       format_settings:
         classes: ''
@@ -31,11 +36,11 @@ third_party_settings:
     group_main:
       children:
         - title
-        - field_media
         - body
       label: Main
+      region: content
       parent_name: group_tabs
-      weight: 20
+      weight: 0
       format_type: tab
       format_settings:
         classes: ''
@@ -47,8 +52,9 @@ third_party_settings:
       children:
         - field_components
       label: Content
+      region: content
       parent_name: group_tabs
-      weight: 21
+      weight: 1
       format_type: tab
       format_settings:
         classes: ''
@@ -65,12 +71,13 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 1
     region: content
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
   created:
     type: datetime_timestamp
@@ -80,7 +87,7 @@ content:
     third_party_settings: {  }
   field_components:
     type: paragraphs
-    weight: 2
+    weight: 1
     region: content
     settings:
       title: Component
@@ -99,18 +106,20 @@ content:
     third_party_settings:
       limited_field_widgets:
         limit_values: '0'
-  field_meta_tags:
-    type: metatag_firehose
-    weight: 26
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  langcode:
-    type: language_select
+  field_media:
+    type: media_library_widget
     weight: 2
     region: content
     settings:
-      include_locked: true
+      media_types: {  }
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 10
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   path:
     type: path
@@ -141,7 +150,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
@@ -153,6 +162,7 @@ content:
     region: content
     settings:
       match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
@@ -161,4 +171,5 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  langcode: true
