--- a/config/apextoolgroup/default/core.entity_view_display.node.brands.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.brands.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.brands.body
     - field.field.node.brands.field_all_industries
     - field.field.node.brands.field_all_markets
+    - field.field.node.brands.field_banner_image
     - field.field.node.brands.field_brand_color
     - field.field.node.brands.field_business_unit
     - field.field.node.brands.field_claim_to_fame
@@ -16,7 +17,9 @@ dependencies:
     - field.field.node.brands.field_listing_image
     - field.field.node.brands.field_read_more
     - field.field.node.brands.field_short_description
+    - field.field.node.brands.field_showed_on_listing_page
     - field.field.node.brands.field_solution
+    - field.field.node.brands.field_weight
     - node.type.brands
   module:
     - text
@@ -42,6 +45,7 @@ content:
 hidden:
   field_all_industries: true
   field_all_markets: true
+  field_banner_image: true
   field_brand_color: true
   field_business_unit: true
   field_claim_to_fame: true
@@ -51,6 +55,8 @@ hidden:
   field_listing_image: true
   field_read_more: true
   field_short_description: true
+  field_showed_on_listing_page: true
   field_solution: true
+  field_weight: true
   langcode: true
   search_api_excerpt: true
