--- a/config/apextoolgroup/default/views.view.brands.yml
+++ b/config/apextoolgroup/default/views.view.brands.yml
@@ -4,10 +4,8 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_listing_image
-    - field.storage.node.field_read_more
     - node.type.brands
   module:
-    - link
     - node
     - user
 id: brands
@@ -24,7 +22,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: Brands
+      title: 'Homepage Brands'
       fields:
         field_listing_image:
           id: field_listing_image
@@ -89,19 +87,20 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        field_read_more:
-          id: field_read_more
-          table: node__field_read_more
-          field: field_read_more
+        view_node:
+          id: view_node
+          table: node
+          field: view_node
           relationship: none
           group_type: group
           admin_label: ''
-          plugin_id: field
+          entity_type: node
+          plugin_id: entity_link
           label: ''
           exclude: false
           alter:
-            alter_text: true
-            text: '{{ field_read_more }} '
+            alter_text: false
+            text: ''
             make_link: false
             path: ''
             absolute: false
@@ -138,24 +137,9 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: uri
-          type: link
-          settings:
-            trim_length: 80
-            url_only: true
-            url_plain: true
-            rel: '0'
-            target: '0'
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
+          text: view
+          output_url_as_text: true
+          absolute: false
       pager:
         type: none
         options:
@@ -179,22 +163,19 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
+        field_weight_value:
+          id: field_weight_value
+          table: node__field_weight
+          field: field_weight_value
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          order: DESC
+          plugin_id: standard
+          order: ASC
           expose:
             label: ''
             field_identifier: ''
           exposed: false
-          granularity: second
       arguments: {  }
       filters:
         status:
@@ -252,6 +233,44 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
+        field_is_featured_value:
+          id: field_is_featured_value
+          table: node__field_is_featured
+          field: field_is_featured_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: boolean
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       style:
         type: default
       row:
@@ -277,7 +296,6 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_listing_image'
-        - 'config:field.storage.node.field_read_more'
   homepage_brand_block:
     id: homepage_brand_block
     display_title: 'Homepage Brand Block'
@@ -295,4 +313,3 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_listing_image'
-        - 'config:field.storage.node.field_read_more'
