--- a/config/apextoolgroup/default/core.entity_view_display.block_content.basic.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.block_content.basic.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - block_content.type.basic
     - field.field.block_content.basic.body
+    - field.field.block_content.basic.field_title
   module:
     - text
 _core:
@@ -18,6 +19,14 @@ content:
     type: text_default
     label: hidden
     settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_title:
+    type: string
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
     weight: 0
     region: content
