feature/APEX-259: ATG- created about us page

--- a/config/apextoolgroup/default/core.entity_view_display.node.page.full.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.page.full.yml
@@ -6,6 +6,8 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_is_featured
+    - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
@@ -36,6 +38,8 @@ content:
     weight: 1
     region: content
 hidden:
+  field_is_featured: true
+  field_media: true
   field_meta_tags: true
   langcode: true
   links: true
