--- a/config/apextoolgroup/default/core.entity_form_display.node.page.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_is_featured
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
@@ -22,12 +23,11 @@ third_party_settings:
       children:
         - group_main
         - group_content
-        - field_media
         - langcode
       label: Tabs
       region: hidden
       parent_name: ''
-      weight: 11
+      weight: 9
       format_type: tabs
       format_settings:
         classes: ''
@@ -81,7 +81,7 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -106,6 +106,13 @@ content:
     third_party_settings:
       limited_field_widgets:
         limit_values: '0'
+  field_is_featured:
+    type: boolean_checkbox
+    weight: 26
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_media:
     type: media_library_widget
     weight: 2
@@ -115,7 +122,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 10
+    weight: 8
     region: content
     settings:
       sidebar: true
@@ -123,27 +130,27 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 5
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 9
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 6
+    weight: 4
     region: content
     settings:
       display_label: true
@@ -158,7 +165,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 0
     region: content
     settings:
       match_operator: CONTAINS
@@ -167,7 +174,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
