--- a/config/apextoolgroup/default/core.entity_view_display.node.page.block_title.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.page.block_title.yml
@@ -6,6 +6,8 @@ dependencies:
     - core.entity_view_mode.node.block_title
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_is_featured
+    - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
@@ -20,6 +22,8 @@ content: {  }
 hidden:
   body: true
   field_components: true
+  field_is_featured: true
+  field_media: true
   field_meta_tags: true
   langcode: true
   links: true
