--- a/config/apextoolgroup/default/core.entity_view_display.node.page.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.page.default.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_is_featured
+    - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
@@ -17,6 +19,16 @@ targetEntityType: node
 bundle: page
 mode: default
 content:
+  field_is_featured:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_meta_tags:
     type: metatag_empty_formatter
     label: above
@@ -27,6 +39,7 @@ content:
 hidden:
   body: true
   field_components: true
+  field_media: true
   langcode: true
   links: true
   search_api_excerpt: true
