--- a/config/apextoolgroup/default/core.entity_view_display.node.page.search_index.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.page.search_index.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.search_index
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_is_featured
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
@@ -42,6 +43,7 @@ content:
     region: content
 hidden:
   field_components: true
+  field_is_featured: true
   field_media: true
   field_meta_tags: true
   langcode: true
