--- a/config/apextoolgroup/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.page.teaser.yml
@@ -6,6 +6,8 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_is_featured
+    - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
@@ -39,6 +41,8 @@ content:
     region: content
 hidden:
   field_components: true
+  field_is_featured: true
+  field_media: true
   field_meta_tags: true
   langcode: true
   links: true
