--- a/config/apextoolgroup/default/field.field.node.page.field_components.yml
+++ b/config/apextoolgroup/default/field.field.node.page.field_components.yml
@@ -6,6 +6,8 @@ dependencies:
     - field.storage.node.field_components
     - node.type.page
     - paragraphs.paragraphs_type.accordion
+    - paragraphs.paragraphs_type.accordion_item
+    - paragraphs.paragraphs_type.atg_glance
     - paragraphs.paragraphs_type.content
     - paragraphs.paragraphs_type.embed_block
     - paragraphs.paragraphs_type.embed_iframe
@@ -14,9 +16,15 @@ dependencies:
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.hero
+    - paragraphs.paragraphs_type.hero_slide
+    - paragraphs.paragraphs_type.image_and_text
+    - paragraphs.paragraphs_type.image_with_cta
+    - paragraphs.paragraphs_type.inventor
+    - paragraphs.paragraphs_type.inventor_image_and_text
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.tabs
+    - paragraphs.paragraphs_type.tabs_tab
   module:
     - entity_reference_revisions
 _core:
@@ -34,79 +42,90 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    negate: 0
     target_bundles:
       content: content
       accordion: accordion
+      accordion_item: accordion_item
       embed_block: embed_block
       embed_iframe: embed_iframe
       embed_view: embed_view
       featured_content: featured_content
       featured_media: featured_media
       hero: hero
+      hero_slide: hero_slide
       featured_links: featured_links
       pullquote: pullquote
       section: section
       tabs: tabs
+      tabs_tab: tabs_tab
+      atg_glance: atg_glance
+      image_and_text: image_and_text
+      image_with_cta: image_with_cta
+      inventor: inventor
+      inventor_image_and_text: inventor_image_and_text
+    negate: 0
     target_bundles_drag_drop:
-      content:
-        enabled: true
-        weight: -41
       accordion:
-        enabled: true
         weight: -40
+        enabled: true
       accordion_item:
         weight: -39
-        enabled: false
+        enabled: true
+      atg_glance:
+        weight: 24
+        enabled: true
+      content:
+        weight: -41
+        enabled: true
       embed_block:
-        enabled: true
         weight: -38
+        enabled: true
       embed_iframe:
-        enabled: true
         weight: -37
+        enabled: true
       embed_view:
-        enabled: true
         weight: -36
+        enabled: true
       featured_content:
-        enabled: true
         weight: -35
+        enabled: true
+      featured_links:
+        weight: -31
+        enabled: true
       featured_media:
-        enabled: true
         weight: -34
-      hero:
         enabled: true
+      hero:
         weight: -33
+        enabled: true
       hero_slide:
         weight: -32
-        enabled: false
-      featured_links:
         enabled: true
-        weight: -31
-      pod:
+      image_and_text:
+        weight: 31
         enabled: true
-        weight: -30
-      pod_pea_content:
-        weight: -29
+      image_with_cta:
+        weight: 32
+        enabled: true
+      info_section:
+        weight: 34
         enabled: false
+      inventor:
+        weight: 33
+        enabled: true
+      inventor_image_and_text:
+        weight: 34
+        enabled: true
       pullquote:
-        enabled: true
         weight: -28
+        enabled: true
       section:
-        enabled: true
         weight: -27
-      slider:
         enabled: true
-        weight: -26
-      slider_slide_photo:
-        weight: -25
-        enabled: false
-      slider_slide_video:
-        weight: -24
-        enabled: false
       tabs:
-        enabled: true
         weight: -23
+        enabled: true
       tabs_tab:
         weight: -22
-        enabled: false
+        enabled: true
 field_type: entity_reference_revisions
