APS-138: Ignore unwanted configuration of warranty_export

--- a/config/sata_brazil/default/config_ignore.settings.yml
+++ b/config/sata_brazil/default/config_ignore.settings.yml
@@ -1,5 +1,6 @@
 langcode: pt-br
 ignored_config_entities:
+  - 'apex_common.settings:warranty_highest_exported_sid'
   - 'block.block.custom_*'
   - 'sata_core.settings:warranty_highest_exported_sid'
   - 'acquia_connector.settings:spi.site_environment'
