--- a/config/sata_us/default/config_ignore.settings.yml
+++ b/config/sata_us/default/config_ignore.settings.yml
@@ -1,4 +1,5 @@
 ignored_config_entities:
+  - 'apex_common.settings:warranty_highest_exported_sid'
   - 'block.block.custom_*'
   - 'sata_core.settings:warranty_highest_exported_sid'
   - 'acquia_connector.settings:spi.site_environment'
