--- a/config/apextoolgroup/default/block.block.leadership.yml
+++ b/config/apextoolgroup/default/block.block.leadership.yml
@@ -1,23 +1,23 @@
-uuid: d2e33ed5-43a5-437b-8b0d-d9881606f890
+uuid: bb4bcd5b-bcc6-4a48-b513-e18d3cca6d06
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.brand_listing_banner
+    - fixed_block_content.fixed_block_content.leadership
   module:
     - fixed_block_content
     - system
   theme:
     - apextoolgroup
-id: brandlistingbanner
+id: leadership
 theme: apextoolgroup
 region: pre_content
-weight: -13
+weight: -11
 provider: null
-plugin: 'fixed_block_content:brand_listing_banner'
+plugin: 'fixed_block_content:leadership'
 settings:
-  id: 'fixed_block_content:brand_listing_banner'
-  label: 'Brand Listing Banner'
+  id: 'fixed_block_content:leadership'
+  label: 'Leadership hero image'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /brands-faceting
+    pages: /leadership
