--- a/config/apextoolgroup/default/views.view.brands.yml
+++ b/config/apextoolgroup/default/views.view.brands.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_listing_image
+    - field.storage.node.field_read_more
     - node.type.brands
   module:
+    - link
     - node
     - user
 id: brands
@@ -87,15 +89,14 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        view_node:
-          id: view_node
-          table: node
-          field: view_node
+        field_read_more:
+          id: field_read_more
+          table: node__field_read_more
+          field: field_read_more
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          plugin_id: entity_link
+          plugin_id: field
           label: ''
           exclude: false
           alter:
@@ -137,9 +138,24 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          text: view
-          output_url_as_text: true
-          absolute: false
+          click_sort_column: uri
+          type: link
+          settings:
+            trim_length: 80
+            url_only: true
+            url_plain: true
+            rel: '0'
+            target: '0'
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: none
         options:
@@ -296,6 +312,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_listing_image'
+        - 'config:field.storage.node.field_read_more'
   homepage_brand_block:
     id: homepage_brand_block
     display_title: 'Homepage Brand Block'
@@ -313,3 +330,4 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_listing_image'
+        - 'config:field.storage.node.field_read_more'
