--- a/config/apextoolgroup/default/webform.webform.product_suggestion_agreement.yml
+++ b/config/apextoolgroup/default/webform.webform.product_suggestion_agreement.yml
@@ -285,7 +285,7 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: kuntal.das@srijan.net
+      to_mail: patent.submissions@apextoolgroup.com
       to_options: {  }
       bcc_mail: ''
       bcc_options: {  }
@@ -299,7 +299,7 @@ handlers:
       sender_mail: ''
       sender_name: ''
       subject: 'Product Idea Kit Inquiry'
-      body: "<p>Submitted on [webform_submission:created]</p>\r\n\r\n<p>Submitted by: [webform_submission:user]</p>\r\n\r\n<p>Submitted values are:</p>\r\n\r\n<p>First Name: [webform_submission:values:name]</p>\r\n\r\n<p>Last Name: [webform_submission:values:business_name]</p>\r\n\r\n<p>Email Address: [webform_submission:values:email_address]</p>\r\n\r\n<p>Phone Number: [webform_submission:values:phone_number]</p>\r\n\r\n<p>Postal Code: [webform_submission:values:postal_code]</p>\r\n\r\n<p>Country: [webform_submission:values:country]</p>\r\n\r\n<p>Address:[webform_submission:values:address_actual]</p>\r\n\r\n<p>City:[webform_submission:values:city]</p>\r\n\r\n<p>State/Province: [webform_submission:values:state_province][webform_submission:values:state_province_text]</p>\r\n\r\n<p>Request/Comments: [webform_submission:values:request_comments]</p>\r\n\r\n<p>The results of this submission may be viewed at:[webform_submission:url]</p>"
+      body: "<p>Submitted on [webform_submission:created]</p>\r\n\r\n<p>Submitted by: [webform_submission:user]</p>\r\n\r\n<p>Submitted values are:</p>\r\n\r\n<p>First Name: [webform_submission:values:name]</p>\r\n\r\n<p>Last Name: [webform_submission:values:business_name]<br />\r\n<br />\r\nAddress 1:[webform_submission:values:address_actual]<br />\r\n<br />\r\nAddress 2:[webform_submission:values:address_2]<br />\r\n<br />\r\nCity:[webform_submission:values:city]<br />\r\n<br />\r\nState/Province/Region: [webform_submission:values:state_province][webform_submission:values:state_province_text]<br />\r\n<br />\r\nPostal Code: [webform_submission:values:postal_code]<br />\r\n<br />\r\nCountry: [webform_submission:values:country]</p>\r\n\r\n<p>Email Address: [webform_submission:values:email_address]</p>\r\n\r\n<p>Idea Name: [webform_submission:values:idea_name]</p>\r\n\r\n<p>My submission solves the following problem:<br />\r\n<br />\r\nPatent or application number: [webform_submission:values:product_model_number]</p>\r\n\r\n<p>The results of this submission may be viewed at:[webform_submission:url]</p>"
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
