Apex-258: Application form styling.

--- a/config/apextoolgroup/default/block.block.webform.yml
+++ b/config/apextoolgroup/default/block.block.webform.yml
@@ -5,10 +5,14 @@ dependencies:
   config:
     - webform.webform.product_suggestion_agreement
   module:
+    - block_class
     - system
     - webform
   theme:
     - apextoolgroup
+third_party_settings:
+  block_class:
+    classes: 'container application-form'
 id: webform
 theme: apextoolgroup
 region: content
